{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 190,
  "lineage": "175388d4-7150-b7ed-52d3-385c71826ced",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0621917966e36af44",
            "arn": "arn:aws:ec2:ap-south-1:339712767628:elastic-ip/eipalloc-0621917966e36af44",
            "association_id": "eipassoc-0b23cf72a02d35246",
            "domain": "vpc",
            "id": "eipalloc-0621917966e36af44",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08494f7607160820f",
            "private_dns": "ip-10-0-1-182.ap-south-1.compute.internal",
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-13-202-194-235.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.194.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b49a24cfb95941c",
            "arn": "arn:aws:ec2:ap-south-1:339712767628:instance/i-08b0f1c0719e2dabe",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b0f1c0719e2dabe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "projectkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb87773e482ae240",
            "private_dns": "ip-172-31-36-149.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.149",
            "public_dns": "ec2-13-232-33-236.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.33.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08dea81ec3843eac3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00599deb1e55bc56a",
            "tags": {
              "Name": "first"
            },
            "tags_all": {
              "Name": "first"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f02ee7deb08f8a9b"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "name2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:internet-gateway/igw-0d357cbeeb31c79d6",
            "id": "igw-0d357cbeeb31c79d6",
            "owner_id": "339712767628",
            "tags": {
              "Name": "cust IG"
            },
            "tags_all": {
              "Name": "cust IG"
            },
            "vpc_id": "vpc-03cfae3e54231baea"
          },
          "dependencies": [
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0621917966e36af44",
            "association_id": "eipassoc-0b23cf72a02d35246",
            "connectivity_type": "public",
            "id": "nat-089ad5d654ec450a6",
            "network_interface_id": "eni-08494f7607160820f",
            "private_ip": "10.0.1.182",
            "public_ip": "13.202.194.235",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08648f328e01a5025",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.custom",
            "aws_subnet.main",
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:route-table/rtb-0e1cf87de08b7136a",
            "id": "rtb-0e1cf87de08b7136a",
            "owner_id": "339712767628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-089ad5d654ec450a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv RT"
            },
            "tags_all": {
              "Name": "priv RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cfae3e54231baea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.custom",
            "aws_nat_gateway.example3",
            "aws_subnet.main",
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:route-table/rtb-0381dbc0ca4c8e759",
            "id": "rtb-0381dbc0ca4c8e759",
            "owner_id": "339712767628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d357cbeeb31c79d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub RT"
            },
            "tags_all": {
              "Name": "pub RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cfae3e54231baea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.name2",
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4d867360a6dc61c",
            "route_table_id": "rtb-0e1cf87de08b7136a",
            "subnet_id": "subnet-0041c4d0c1f611972"
          },
          "dependencies": [
            "aws_eip.custom",
            "aws_nat_gateway.example3",
            "aws_route_table.private_route",
            "aws_subnet.main",
            "aws_subnet.main4",
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092d24b7c885355ab",
            "route_table_id": "rtb-0e1cf87de08b7136a",
            "subnet_id": "subnet-0f908fd4b4049ff04"
          },
          "dependencies": [
            "aws_eip.custom",
            "aws_nat_gateway.example3",
            "aws_route_table.private_route",
            "aws_subnet.main",
            "aws_subnet.main5",
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030ab23062a4cc3d6",
            "route_table_id": "rtb-0381dbc0ca4c8e759",
            "subnet_id": "subnet-08648f328e01a5025"
          },
          "dependencies": [
            "aws_internet_gateway.name2",
            "aws_route_table.public_route",
            "aws_subnet.main",
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e454ccb1153d892",
            "route_table_id": "rtb-0381dbc0ca4c8e759",
            "subnet_id": "subnet-04e17117c9d8c2679"
          },
          "dependencies": [
            "aws_internet_gateway.name2",
            "aws_route_table.public_route",
            "aws_subnet.main2",
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056643f27e5a5b9cf",
            "route_table_id": "rtb-0381dbc0ca4c8e759",
            "subnet_id": "subnet-056162dd11d6182e7"
          },
          "dependencies": [
            "aws_internet_gateway.name2",
            "aws_route_table.public_route",
            "aws_subnet.main3",
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:security-group/sg-0559d290100de2677",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0559d290100de2677",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "339712767628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG"
            },
            "tags_all": {
              "Name": "SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cfae3e54231baea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:subnet/subnet-08648f328e01a5025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08648f328e01a5025",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712767628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub1"
            },
            "tags_all": {
              "Name": "pub1"
            },
            "vpc_id": "vpc-03cfae3e54231baea"
          },
          "dependencies": [
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:subnet/subnet-04e17117c9d8c2679",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e17117c9d8c2679",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712767628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub2"
            },
            "tags_all": {
              "Name": "pub2"
            },
            "vpc_id": "vpc-03cfae3e54231baea"
          },
          "dependencies": [
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:subnet/subnet-056162dd11d6182e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056162dd11d6182e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712767628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub3"
            },
            "tags_all": {
              "Name": "pub3"
            },
            "vpc_id": "vpc-03cfae3e54231baea"
          },
          "dependencies": [
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:subnet/subnet-0041c4d0c1f611972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0041c4d0c1f611972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712767628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri1"
            },
            "tags_all": {
              "Name": "pri1"
            },
            "vpc_id": "vpc-03cfae3e54231baea"
          },
          "dependencies": [
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:subnet/subnet-0f908fd4b4049ff04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f908fd4b4049ff04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712767628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri2"
            },
            "tags_all": {
              "Name": "pri2"
            },
            "vpc_id": "vpc-03cfae3e54231baea"
          },
          "dependencies": [
            "aws_vpc.name1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712767628:vpc/vpc-03cfae3e54231baea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0fd586f4995703b",
            "default_route_table_id": "rtb-0691fd2d346549633",
            "default_security_group_id": "sg-06612c444ac984888",
            "dhcp_options_id": "dopt-0c661907f904e72ab",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03cfae3e54231baea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0691fd2d346549633",
            "owner_id": "339712767628",
            "tags": {
              "Name": "custom"
            },
            "tags_all": {
              "Name": "custom"
            }
          }
        }
      ]
    }
  ]
}